fix: added styling, additional logic to numberpad

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Redux TodoMVC Example</title>
+    <link rel="stylesheet" type="text/css" href="../src/styles.css">
+    <title>React Calculator Example</title>
   </head>
   <body>
     <div class="todoapp" id="root"></div>
