--- a/index.html
+++ b/index.html
@@ -18,5 +18,5 @@
       To begin the development, run `npm start` in this folder.
       To create a production bundle, use `npm run build`.
     -->
-  </body>
+  <script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="./dist/bundle.js"></script></body>
 </html>
